# MRP-Workspace

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/MRP_Description/: CMakeLists.txt  package.xml
src/MRP_Description/config/: RVIZ_config.rviz  diff_drive_controller.yaml  joystick.yaml  my_controllers.yaml
src/MRP_Description/launch/: Gazebo.launch.py  Gazebo_Control.launch.py  MRP_RVIZ.launch.py  MRP_Sim.launch.py  RVIZ.launch.py  description.launch.py  joystick.launch.py  launch_robot.launch.py  rsp.launch.py
src/MRP_Description/launch/testing/: MRP_Testing_Gazebo_Control.launch.py  MRP_Testing_RVIZ.launch.py
src/MRP_Description/meshes/: 520_dc_gear_motor.stl  PLA Wheel Frame.stl  Pendulum Top Bracket.stl  TPU Tire.stl  chassis.stl  chassis_front_spine.stl  chassis_rear_spine.stl  pendulum_bottom_bracket.stl  pendulum_bottom_with_pin.stl  pendulum_bracket.stl
src/MRP_Description/urdf/: MRP.urdf.xacro  MRP_Body.xacro  MRP_Control.xacro  MRP_Gazebo_Control.xacro  MRP_Gazebo_Properties.xacro  MRP_ROS2_Control.xacro  test_diff_drive.xacro.urdf
src/MRP_Description/urdf/testing/: MRP_Testing.urdf.xacro  MRP_Testing_Body.xacro  MRP_Testing_Gazebo_Control.xacro  MRP_Testing_Gazebo_Properties.xacro  MRP_Testing_ROS2_Control.xacro
src/MRP_Hardware_Interface/: CMakeLists.txt  MRP_Hardware_Interface.xml  package.xml
src/MRP_Hardware_Interface/bringup/config/: diffbot_controllers.yaml
src/MRP_Hardware_Interface/bringup/launch/: diffbot.launch.py
src/MRP_Hardware_Interface/description/meshes/: entire_chassis.stl
src/MRP_Hardware_Interface/description/ros2_control/: diffbot.ros2_control.xacro
src/MRP_Hardware_Interface/description/urdf/: MRP_Body.xacro  diffbot.urdf.xacro
src/MRP_Hardware_Interface/hardware/: diffbot_system.cpp
src/MRP_Hardware_Interface/hardware/include/MRP_Hardware_Interface/: arduino_comms.h  diffbot_system.hpp
src/mrp_description/: CMakeLists.txt  package.xml
src/mrp_description/config/: joystick.yaml
src/mrp_description/launch/: MRP_RVIZ.launch.py  MRP_Sim.launch.py  joystick.launch.py  rsp.launch.py
src/mrp_description/urdf/: MRP.urdf.xacro  MRP_Body.xacro  MRP_Control.xacro  MRP_Gazebo_Control.xacro  MRP_Gazebo_Properties.xacro
src/mrp_hardware_interface/: CMakeLists.txt  mrp_hardware_interface.xml  package.xml
src/mrp_hardware_interface/hardware/: diffbot_system.cpp
src/mrp_hardware_interface/hardware/include/mrp_hardware_interface/: diffbot_system.hpp
src/mrp_real_robot/: CMakeLists.txt  package.xml
src/mrp_real_robot/config/: my_controllers.yaml
src/mrp_real_robot/launch/: gazebo_twin.launch.py  launch_robot.launch.py
src/mrp_real_robot/meshes/: wheel_coupler_assembly.stl
src/mrp_real_robot/urdf/: MRP.urdf.xacro  MRP_Body.xacro  MRP_Control.xacro  MRP_Gazebo_Listener.xacro  MRP_Mirror.urdf.xacro
src/my_gazebo_plugins/: CMakeLists.txt  package.xml
src/my_gazebo_plugins/src/: joint_state_mirror.cpp  odom_mirror.cpp
